# smsir

./: LICENSE  README.md  setup.cfg
smsir/: __init__.py  customerclub.py  sms.py  token.py
smsir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
