[metadata]
name = smsir
version = 1.0.5
author = mohammad reza rahimaee
author_email = mohammad.rahimaee@gmail.com
description = manage message in www.sms.ir
keywords = sms.ir, smsir_python,sms.ir pip
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahimaee/smsir.git
project_urls =
    Bug Tracker = https://github.com/rahimaee/smsir/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    certifi
    charset-normalizer
    idna
    urllib3
